Fix missed invalidation in markFixedPositionObjectForLayoutIfNeeded.

If a fixed-position element had "auto" offsets in both block and inline flow
directions, the LayoutOnlyFixedPositionedObjects codepath failed to mark it for
layout when its computed logical top changed.

BUG=674867

Review-Url: https://codereview.chromium.org/2683773004
Cr-Commit-Position: refs/heads/master@{#448889}

Former-commit-id: ccf2862c092b2339e42d7131d219b18060a773a7